cabal-version:      3.0
name:               text-encode
version:            0.1.0.0
homepage:           https://github.com/friedbrice/text-encode#readme
bug-reports:        https://github.com/friedbrice/text-encode/issues
author:             Daniel Brice
maintainer:         danielbrice@gmail.com
copyright:          Copyright Daniel Brice
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
description:
  Classes and newtypes for deriving uniform textual encodings.

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/friedbrice/text-encode

common dialect
  ghc-options:        -Wall
  build-depends:      base >=4.7 && <5
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    MultiParamTypeClasses
    ScopedTypeVariables
    TupleSections
    TypeApplications
    UndecidableInstances

common opts-dist
  ghc-options: -O2 -Werror

common opts-dev
  ghc-options: -O0 -Wwarn

common deps-lib
  build-depends:
    , bytestring
    , casing
    , text

common deps-aeson
  build-depends:
    , aeson
    , bytestring
    , text

common deps-cassava
  build-depends:
    , bytestring
    , cassava
    , text

common deps-http-api-data
  build-depends:
    , bytestring
    , http-api-data
    , http-types
    , text

common deps-persistent
  build-depends: persistent

common deps-postgresql-simple
  build-depends: postgresql-simple

common deps-sqlite-simple
  build-depends: sqlite-simple

common deps-dev

library
  import:          dialect
  import:          opts-dist
  import:          deps-lib
  hs-source-dirs:  src/text-encode

  -- cabal-fmt: expand src/text-encode
  exposed-modules: Text.Encode

library text-encode-aeson
  import:          dialect
  import:          opts-dist
  import:          deps-aeson
  visibility:      public
  ghc-options:     -Wno-orphans
  ghc-options:     -Wno-orphans
  build-depends:   text-encode
  hs-source-dirs:  src/text-encode-aeson

  -- cabal-fmt: expand src/text-encode-aeson
  exposed-modules: Text.Encode.Aeson

library text-encode-cassava
  import:          dialect
  import:          opts-dist
  import:          deps-cassava
  visibility:      public
  ghc-options:     -Wno-orphans
  build-depends:   text-encode
  hs-source-dirs:  src/text-encode-cassava

  -- cabal-fmt: expand src/text-encode-cassava
  exposed-modules: Text.Encode.Cassava

library text-encode-http-api-data
  import:          dialect
  import:          opts-dist
  import:          deps-http-api-data
  visibility:      public
  ghc-options:     -Wno-orphans
  build-depends:   text-encode
  hs-source-dirs:  src/text-encode-http-api-data

  -- cabal-fmt: expand src/text-encode-http-api-data
  exposed-modules: Text.Encode.HttpApiData

library text-encode-persistent
  import:          dialect
  import:          opts-dist
  import:          deps-persistent
  visibility:      public
  ghc-options:     -Wno-orphans
  build-depends:   text-encode
  hs-source-dirs:  src/text-encode-persistent

  -- cabal-fmt: expand src/text-encode-persistent
  exposed-modules: Text.Encode.Persistent

library text-encode-postgresql-simple
  import:          dialect
  import:          opts-dist
  import:          deps-postgresql-simple
  visibility:      public
  ghc-options:     -Wno-orphans
  build-depends:   text-encode
  hs-source-dirs:  src/text-encode-postgresql-simple

  -- cabal-fmt: expand src/text-encode-postgresql-simple
  exposed-modules: Text.Encode.PostgresqlSimple

library text-encode-sqlite-simple
  import:          dialect
  import:          opts-dist
  import:          deps-sqlite-simple
  visibility:      public
  ghc-options:     -Wno-orphans
  build-depends:   text-encode
  hs-source-dirs:  src/text-encode-sqlite-simple

  -- cabal-fmt: expand src/text-encode-sqlite-simple
  exposed-modules: Text.Encode.SqliteSimple

test-suite dev
  import:         dialect
  import:         opts-dev
  import:         deps-lib
  import:         deps-aeson
  import:         deps-cassava
  import:         deps-http-api-data
  import:         deps-persistent
  import:         deps-postgresql-simple
  import:         deps-sqlite-simple
  import:         deps-dev
  type:           exitcode-stdio-1.0
  ghc-options:    -Wno-orphans
  main-is:        Main.hs
  hs-source-dirs:
    src/text-encode
    src/text-encode-aeson
    src/text-encode-cassava
    src/text-encode-http-api-data
    src/text-encode-persistent
    src/text-encode-postgresql-simple
    src/text-encode-sqlite-simple
    src/dev
    src/dev-main


  -- cabal-fmt: expand src/text-encode
  -- cabal-fmt: expand src/text-encode-aeson
  -- cabal-fmt: expand src/text-encode-cassava
  -- cabal-fmt: expand src/text-encode-http-api-data
  -- cabal-fmt: expand src/text-encode-persistent
  -- cabal-fmt: expand src/text-encode-postgresql-simple
  -- cabal-fmt: expand src/text-encode-sqlite-simple
  -- cabal-fmt: expand src/dev
  other-modules:
    DevMain
    Text.Encode
    Text.Encode.Aeson
    Text.Encode.Cassava
    Text.Encode.HttpApiData
    Text.Encode.Persistent
    Text.Encode.PostgresqlSimple
    Text.Encode.SqliteSimple
